[metadata]
name = heatmapanimation
version = 0.0.2
author = zhushaohz
author_email = zhushaohz@gmail.com
description = Generate heatmap animation with given data and geojson
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/zhushaohz/heatmapanimation
project_urls =
    Bug Tracker = https://github.com/zhushaohz/heatmap-animation/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: GIS
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
install_requires =
    geopandas
    matplotlib
    pandas
    requests
    urllib3
    imageio
    ffmpeg
    ffmpeg-python
    setuptools
    wheel

python_requires = >=3.6

[options.extras_require]
ffmpeg = ffmpeg>=5.0

[options.packages.find]
where = src